# node-agnostic-datastream-interface

./: CMakeLists.txt  README.md  nadi_asyncapi.yaml
cmake/: NadiConfig.cmake.in
include/nadi/: message_validation.hpp  nadi.h
src/: nadi.h
